# unirl

./: LICENSE  README.md  pyproject.toml  pyrightconfig.core.json  requirements.txt
.github/workflows/: ci.yml  release.yml
src/unirl/: __init__.py
src/unirl/config/: __init__.py  loader.py
src/unirl/core/: __init__.py  adapter.py  agent.py  batch_source.py  coordinator.py  env.py  learner.py  rollout.py  types.py
src/unirl/examples/: __init__.py  simple_adapter.py  simple_agent.py  simple_env.py  simple_rollout.py
src/unirl/examples/configs/: simple.yaml
src/unirl/impl/: __init__.py  interfaces.py
src/unirl/impl/agents/: __init__.py  reinforce_agent.py  torch_agent.py
src/unirl/impl/batch_sources/: __init__.py
src/unirl/impl/buffers/: __init__.py  episode_buffer.py
src/unirl/impl/learners/: __init__.py  reinforce.py
src/unirl/impl/models/: __init__.py  mlp.py
src/unirl/impl/rollouts/: __init__.py
src/unirl/interfaces/: __init__.py  adapter.py  agent.py  env.py  types.py
src/unirl/registry/: __init__.py  registry.py
src/unirl/system/: __init__.py  system.py
tests/: test_impl.py  test_interfaces.py  test_placeholder.py
unirl/: train.py
unirl/unirl_agent/: rl_learn.py  rl_learn_single_gpu.py
unirl/unirl_agent/libs/: nn_layers.py  nn_models.py  rl_model.py  rl_preprocess.py  rl_runner.py
unirl/unirl_env/libs/configs/: action_config.yml  agent_config.yml  env_config.yml  learn_config.yml  obs_config.yml  state_config.yml
unirl/unirl_env/libs/envlib/: env_func.py
unirl/unirl_env/libs/utils/: config.py  img_plotter.py
